[package]
name = "learn_ash"
version = "0.1.0"
edition = "2021"
authors = ["范申"]

[dependencies]
winit = "0.20.0"
ash = { version = "0.37.0", features = ["linked"] }
num = "0.4.0"
memoffset = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
